Update manifest and popup.js for localization: change app name to 'Insta Count' and update status messages to English.

--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
-  "name": "Instagram Follower Counter",
+  "name": "Insta Count",
   "version": "1.0",
-  "description": "Zeigt die vollständigen Followerzahlen auf Instagram an",
+  "description": "Shows the complete follower count on Instagram",
   "permissions": [
     "storage"
   ],
